--- a/src/app/interaction-reports/resolved-interactions-reports-list/resolved-interactions-reports-list.component.html
+++ b/src/app/interaction-reports/resolved-interactions-reports-list/resolved-interactions-reports-list.component.html
@@ -219,7 +219,7 @@
                 <td class="table-column-200" mat-cell *matCellDef="let row">{{row?.q6 ||row?.overallFeedback}}</td>
             </ng-container>
             <ng-container matColumnDef="q7">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Q7</th>
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Additional Feedback</th>
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.q7 ||row?.additionalFeedback}}</td>
             </ng-container>
             <ng-container matColumnDef="totalServeyValue">
