--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -94,6 +94,13 @@
             <p>Interaction Bulk Closer</p>
           </a>
         </li>
+        <!-- <li class="nav-item" *hasClaim="['INT_BULK_INTERACTION_CLOSER','INT_BULK_INTERACTION_CLOSER_HISTORY']">
+          <a [routerLink]="['/interaction/internal-bulk-closer']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+            class="nav-link">
+            <i class="fa fa-upload nav-icon"></i>
+            <p>Internal Bulk Closer</p>
+          </a>
+        </li> -->
       </ul>
 
         <li id="UsersHeading" aria-expanded="true" aria-controls="collapseOne"
@@ -582,6 +589,13 @@
               class="nav-link">
               <i class="far fa-list-alt nav-icon"></i>
               <p>{{'ERROR_LOGS' | translate}}</p>
+            </a>
+          </li>
+          <li *hasClaim="'LOGS_VIEW_ERROR_LOGS'" class="nav-item">
+            <a [routerLink]="['/email-service']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+              class="nav-link">
+              <i class="nav-icon fas fa-envelope-open-text"></i>
+              <p>Email Service</p>
             </a>
           </li>
         </ul>
