--- a/src/app/interaction-reports/reports187/reports187.component.html
+++ b/src/app/interaction-reports/reports187/reports187.component.html
@@ -42,6 +42,9 @@
                 <i class="fas fa-eraser"></i>
                 {{'CLEAR' | translate}}
             </button>
+            <!-- <button type="button" (click)="dowanloadExcal()" class="btn btn-warning btn-md button-margin ml-2"><i
+                class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
+            </button> -->
             <button type="button" (click)="downloadList()" class="btn btn-warning btn-md button-margin ml-2"><i
                 class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
             </button>
