--- a/src/app/inventory/advance-search/advance-search.component.html
+++ b/src/app/inventory/advance-search/advance-search.component.html
@@ -6,15 +6,13 @@
             </div>
         </div>
         <div class="col-md-auto col-sm-auto col">
-            <button type="button" (click)="dialogRef.close(false);" class="btn btn-danger mr-2 btn-sm"><i
-                    class="fas fa-times-circle"></i>
-                Back </button>
+            <button type="button" (click)="searchFilter();" class="btn btn-danger mr-2 btn-sm"><i class="fas fa-times-circle"></i> Back </button>  
         </div>
     </div>
 </div>
 <div class="p-2">
     <div class="row">
-        <div class="col-md-2">
+        <!-- <div class="col-md-2">
             <div class="form-group">
                 <mat-label for="fromDate">{{'FROM_DATE' | translate}} </mat-label>
                 <input class="form-control" [max]="currentDate" [(ngModel)]="fromDate" [owlDateTimeTrigger]="fromDate1"
@@ -29,7 +27,7 @@
                     [owlDateTimeTrigger]="toDate1" [owlDateTime]="toDate1" placeholder="{{'TO_DATE' | translate}}">
                 <owl-date-time [pickerType]="'calendar'" #toDate1></owl-date-time>
             </div>
-        </div>
+        </div> -->
         <div class="col-md-4">
             <div class="form-group">
                 <mat-label>Type </mat-label>
