--- a/src/app/email-service/email-service/email-service.component.html
+++ b/src/app/email-service/email-service/email-service.component.html
@@ -1,1 +1,106 @@
-<p>email-service works!</p>
+
+<div class="page-header-main">
+    <div class="row align-items-center justify-content-between">
+        <div class="col-md-auto col-sm-auto col">
+            <div class="content-header">
+                <h1>185 Reports</h1>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="loading-shade" *ngIf="isLoading">
+    <mat-spinner></mat-spinner>
+</div>
+<!-- <div class="mb-3">
+    <div class="row">
+        <div class="col-12">
+            <div class="content-header headerBackground px-2">
+                <h1>Searching Filter</h1>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
+                <label for="fromDate">{{'FROM_DATE' | translate}} </label>
+                <input class="form-control" [max]="currentDate" [(ngModel)]="fromDate" [owlDateTimeTrigger]="fromDate1"
+                    [owlDateTime]="fromDate1" placeholder="{{'FROM_DATE' | translate}}">
+                <owl-date-time [pickerType]="'calendar'" #fromDate1></owl-date-time>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
+                <label for="toDate">{{'TO_DATE' | translate}} </label>
+                <input class="form-control" id="toDate1" [max]="currentDate" [(ngModel)]="toDate"
+                    [owlDateTimeTrigger]="toDate1" [owlDateTime]="toDate1" placeholder="{{'TO_DATE' | translate}}">
+                <owl-date-time [pickerType]="'calendar'" #toDate1></owl-date-time>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <button type="button" (click)="searchList()" class="btn btn-success btn-md mx-2 button-marginReports">
+                <i class="fas fa-search"></i>
+                {{'SEARCH' | translate}}
+            </button>
+            <button type="button" (click)="onClear();" class="btn btn-danger btn-md button-marginReports">
+                <i class="fas fa-eraser"></i>
+                {{'CLEAR' | translate}}
+            </button>
+            <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-md button-marginReports ml-2"><i
+                class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
+            </button>
+        </div>
+    </div>
+</div> -->
+<div class="page-header-main headerBackground">
+    <div class="row align-items-center justify-content-between">
+        <div class="col-md-auto col-sm-auto col">
+            <div class="content-header">
+                <h1>Email Services</h1>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="table-responsive">
+    <div class="table table-bordered table-hover ">
+        <table [dir]="langDir" mat-table [dataSource]="list" class="table_height_reports"  multiTemplateDataRows>
+
+            <ng-container matColumnDef="appName">
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef>App Name</th>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.appName}}</td>
+            </ng-container>
+            <ng-container matColumnDef="threadName">
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef>Thread Name</th>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.threadName}}</td>
+            </ng-container>
+            <ng-container matColumnDef="appStatus">
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef>App Status</th>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.appStatus}}</td>
+            </ng-container>
+            <ng-container matColumnDef="machineName">
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef>Machine Name</th>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.machineName}}</td>
+            </ng-container>
+            <ng-container matColumnDef="appLastUpdated">
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef>App Last Updated</th>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.appLastUpdated | date:'yyyy-MM-dd hh:mm :a'}}</td>
+            </ng-container>
+            
+
+            <ng-container matColumnDef="footer">
+                <td mat-footer-cell colspan="5" class="d-none" *matFooterCellDef>
+                    <mat-paginator [length]="inventoryResource.totalCount" [pageSize]="inventoryResource.pageSize"
+                        [dir]="langDir" [pageSizeOptions]="[10, 20, 30]">
+                    </mat-paginator>
+                </td>
+            </ng-container>
+            <tr *matNoDataRow>
+                <td colspan="9">
+                    <span class="p-4 mt-4">
+                        <b> {{'NO_DATA_FOUND' | translate}}</b>
+                    </span>
+                </td>
+            </tr>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-footer-row *matFooterRowDef="columnsToDisplay;sticky: true"></tr>
+        </table>
+    </div>
+</div>
