--- a/src/app/email-service/email-service/email-service.component.html
+++ b/src/app/email-service/email-service/email-service.component.html
@@ -84,13 +84,13 @@
             </ng-container>
             
 
-            <ng-container matColumnDef="footer">
-                <td mat-footer-cell colspan="5" class="d-none" *matFooterCellDef>
-                    <mat-paginator [length]="inventoryResource.totalCount" [pageSize]="inventoryResource.pageSize"
+            <!-- <ng-container matColumnDef="footer"> -->
+                <!-- <td mat-footer-cell colspan="5" class="d-none" *matFooterCellDef>
+                    <mat-paginator [length]="inventoryResource?.totalCount" [pageSize]="inventoryResource.pageSize"
                         [dir]="langDir" [pageSizeOptions]="[10, 20, 30]">
                     </mat-paginator>
-                </td>
-            </ng-container>
+                </td> -->
+            <!-- </ng-container> -->
             <tr *matNoDataRow>
                 <td colspan="9">
                     <span class="p-4 mt-4">
@@ -100,7 +100,7 @@
             </tr>
             <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            <tr mat-footer-row *matFooterRowDef="columnsToDisplay;sticky: true"></tr>
+            <!-- <tr mat-footer-row *matFooterRowDef="columnsToDisplay;sticky: true"></tr> -->
         </table>
     </div>
 </div>
