--- a/src/app/queue/queue/queue.component.html
+++ b/src/app/queue/queue/queue.component.html
@@ -38,11 +38,11 @@
                     <i class="las la-pen"></i>
                     {{'EDIT' | translate}}
                 </button>
-                <button *hasClaim="'MST_DELETE_QUE'" (click)="deleteQueue(element)" class="btn btn-danger btn-sm"
+                <!-- <button *hasClaim="'MST_DELETE_QUE'" (click)="deleteQueue(element)" class="btn btn-danger btn-sm"
                     type="button">
                     <i class="las la-trash"></i>
                     {{'DELETE' | translate}}
-                </button>
+                </button> -->
             </td>
         </ng-container>
         <!-- Name Column -->
