--- a/src/app/interaction-reports/grp-tat-reports/grp-tat-reports.component.html
+++ b/src/app/interaction-reports/grp-tat-reports/grp-tat-reports.component.html
@@ -45,6 +45,9 @@
             <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-md button-marginReports ml-2"><i
                 class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
             </button>
+            <!-- <button type="button" (click)="dowanloadExcal()" class="btn btn-warning btn-md button-marginReports ml-2"><i
+                class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
+            </button> -->
         </div>
     </div>
 </div>
