--- a/src/app/interaction-reports/all-team-month-dump-report/all-team-month-dump-report.component.html
+++ b/src/app/interaction-reports/all-team-month-dump-report/all-team-month-dump-report.component.html
@@ -42,12 +42,12 @@
                 <i class="fas fa-eraser"></i>
                 {{'CLEAR' | translate}}
             </button>
-            <button type="button" (click)="onDownloadReport()" class="btn btn-warning btn-md button-margin ml-2"><i
-                class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
-            </button>
-            <!-- <button type="button" (click)="dowanloadExcal()" class="btn btn-warning btn-md button-margin ml-2"><i
+            <!-- <button type="button" (click)="onDownloadReport()" class="btn btn-warning btn-md button-margin ml-2"><i
                 class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
             </button> -->
+            <button type="button" (click)="dowanloadExcal()" class="btn btn-warning btn-md button-margin ml-2"><i
+                class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
+            </button>
         </div>
     </div>
 </div>
@@ -211,7 +211,7 @@
                 </td>
             </ng-container>
             <ng-container matColumnDef="footer">
-                <td mat-footer-cell colspan="12" class="d-none" *matFooterCellDef>
+                <td mat-footer-cell colspan="12" *matFooterCellDef>
                     <mat-paginator [length]="inventoryResource.totalCount" [pageSize]="inventoryResource.pageSize"
                         [dir]="langDir" [pageSizeOptions]="[10, 20, 30]">
                     </mat-paginator>
