--- a/src/app/interaction-reports/closed-interactions-reports-list/closed-interactions-reports-list.component.html
+++ b/src/app/interaction-reports/closed-interactions-reports-list/closed-interactions-reports-list.component.html
@@ -42,12 +42,12 @@
                 <i class="fas fa-eraser"></i>
                 {{'CLEAR' | translate}}
             </button>
-            <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-md button-marginReports ml-2"><i
-                class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
-            </button>
-            <!-- <button type="button" (click)="dowanloadExcal()" class="btn btn-warning btn-md button-marginReports ml-2"><i
+            <!-- <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-md button-marginReports ml-2"><i
                 class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
             </button> -->
+             <button type="button" (click)="dowanloadExcal()" class="btn btn-warning btn-md button-marginReports ml-2"><i
+                class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
+            </button>
         </div>
     </div>
 </div>
