--- a/src/app/interaction-reports/grp-tat-reports/grp-tat-reports.component.html
+++ b/src/app/interaction-reports/grp-tat-reports/grp-tat-reports.component.html
@@ -42,12 +42,12 @@
                 <i class="fas fa-eraser"></i>
                 {{'CLEAR' | translate}}
             </button>
-            <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-md button-marginReports ml-2"><i
-                class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
-            </button>
-            <!-- <button type="button" (click)="dowanloadExcal()" class="btn btn-warning btn-md button-marginReports ml-2"><i
+            <!-- <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-md button-marginReports ml-2"><i
                 class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
             </button> -->
+            <button type="button" (click)="dowanloadExcal()" class="btn btn-warning btn-md button-marginReports ml-2"><i
+                class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
+            </button>
         </div>
     </div>
 </div>
@@ -74,6 +74,14 @@
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Resolved Date and Time</th>
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.resolvedDateAndTime | date:'yyyy-MM-dd hh:mm a'}}</td>
             </ng-container>
+            <ng-container matColumnDef="createdDate">
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Created Date</th>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.createdDate | date:'yyyy-MM-dd hh:mm a'}}</td>
+            </ng-container>
+            <ng-container matColumnDef="ticketStatus">
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Ticket Status</th>
+                <td class="table-column-200" mat-cell *matCellDef="let row">{{row?.ticketStatus}} </td>
+            </ng-container>
             <ng-container matColumnDef="team">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Resolved ByTeam</th>
                 <td class="table-column-200" mat-cell *matCellDef="let row">{{row?.resolvedByTeam}} </td>
@@ -83,7 +91,7 @@
                 <td class="table-column-200" mat-cell *matCellDef="let row">{{row?.timeTaken || '--'}} </td>
             </ng-container>
             <ng-container matColumnDef="footer">
-                <td mat-footer-cell [attr.colspan]="displayedColumns.length"  class="d-none" *matFooterCellDef>
+                <td mat-footer-cell [attr.colspan]="displayedColumns.length" *matFooterCellDef>
                     <mat-paginator [length]="inventoryResource.totalCount" [pageSize]="inventoryResource.pageSize"
                         [dir]="langDir" [pageSizeOptions]="[10, 20, 30]">
                     </mat-paginator>
