--- a/src/app/interaction-reports/interaction-report-list/interaction-report-list.component.html
+++ b/src/app/interaction-reports/interaction-report-list/interaction-report-list.component.html
@@ -128,9 +128,9 @@
                 <i class="fas fa-eraser"></i>
                 {{'CLEAR' | translate}}
             </button>
-            <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-md button-margin ml-2"><i
+            <!-- <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-md button-margin ml-2"><i
                 class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
-            </button>
+            </button> -->
             <button type="button" (click)="dowanloadExcal()" class="btn btn-warning btn-md button-margin ml-2"><i
                 class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
             </button>
@@ -292,10 +292,10 @@
                 </td>
             </ng-container>
             <ng-container matColumnDef="footer">
-                <td mat-footer-cell colspan="9" class="d-none" *matFooterCellDef>
-                    <!-- <mat-paginator [length]="inventoryResource.totalCount" [pageSize]="inventoryResource.pageSize"
+                <td mat-footer-cell colspan="9" *matFooterCellDef>
+                    <mat-paginator [length]="inventoryResource.totalCount" [pageSize]="inventoryResource.pageSize"
                         [dir]="langDir" [pageSizeOptions]="[10, 20, 30]">
-                    </mat-paginator> -->
+                    </mat-paginator>
                 </td>
             </ng-container>
             <!-- <ng-container *ngIf="dataSource.count === 0" matColumnDef="no-records">
