--- a/src/app/interaction-reports/reports187/reports187.component.html
+++ b/src/app/interaction-reports/reports187/reports187.component.html
@@ -42,10 +42,11 @@
                 <i class="fas fa-eraser"></i>
                 {{'CLEAR' | translate}}
             </button>
-            <!-- <button type="button" (click)="dowanloadExcal()" class="btn btn-warning btn-md button-margin ml-2"><i
+           
+            <!-- <button type="button" (click)="downloadList()" class="btn btn-warning btn-md button-margin ml-2"><i
                 class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
             </button> -->
-            <button type="button" (click)="downloadList()" class="btn btn-warning btn-md button-margin ml-2"><i
+            <button type="button" (click)="dowanloadExcal()" class="btn btn-warning btn-md button-margin ml-2"><i
                 class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
             </button>
         </div>
@@ -206,7 +207,7 @@
                 </td>
             </ng-container>
             <ng-container matColumnDef="footer">
-                <td mat-footer-cell colspan="5" class="d-none" *matFooterCellDef>
+                <td mat-footer-cell colspan="5" *matFooterCellDef>
                     <mat-paginator [length]="inventoryResource.totalCount" [pageSize]="inventoryResource.pageSize"
                         [dir]="langDir" [pageSizeOptions]="[10, 20, 30]">
                     </mat-paginator>
