--- a/src/app/interaction-reports/survey-reports/survey-reports.component.html
+++ b/src/app/interaction-reports/survey-reports/survey-reports.component.html
@@ -42,12 +42,12 @@
                 <i class="fas fa-eraser"></i>
                 {{'CLEAR' | translate}}
             </button>
-            <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-md button-marginReports ml-2"><i
-                class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
-            </button>
-            <!-- <button type="button" (click)="dowanloadExcal()" class="btn btn-warning btn-md button-marginReports ml-2"><i
+            <!-- <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-md button-marginReports ml-2"><i
                 class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
             </button> -->
+            <button type="button" (click)="dowanloadExcal()" class="btn btn-warning btn-md button-marginReports ml-2"><i
+                class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
+            </button>
         </div>
     </div>
 </div>
@@ -166,7 +166,7 @@
             </ng-container>
            
             <ng-container matColumnDef="footer">
-                <td mat-footer-cell [attr.colspan]="displayedColumns.length"  class="d-none" *matFooterCellDef>
+                <td mat-footer-cell [attr.colspan]="displayedColumns.length" *matFooterCellDef>
                     <mat-paginator [length]="inventoryResource.totalCount" [pageSize]="inventoryResource.pageSize"
                         [dir]="langDir" [pageSizeOptions]="[10, 20, 30]">
                     </mat-paginator>
