--- a/src/app/interaction-reports/closed-interactions-reports-list/closed-interactions-reports-list.component.html
+++ b/src/app/interaction-reports/closed-interactions-reports-list/closed-interactions-reports-list.component.html
@@ -173,7 +173,7 @@
             </ng-container>
             <ng-container matColumnDef="totalServeyValue">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Total Survey Value</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.totalServeyValue}}</td>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.totalSurveyValue}}</td>
             </ng-container>
             <ng-container matColumnDef="csatCategory">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>CSAT Category</th>
