--- a/src/app/interaction-reports/survey-reports/survey-reports.component.html
+++ b/src/app/interaction-reports/survey-reports/survey-reports.component.html
@@ -102,7 +102,7 @@
                 </td>
             </ng-container>
             <ng-container matColumnDef="q7">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Q7</th>
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Additional Feedback</th>
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.q7}}
                 </td>
             </ng-container>
