--- a/src/app/inventory/send-email-dialog/send-email-dialog.component.html
+++ b/src/app/inventory/send-email-dialog/send-email-dialog.component.html
@@ -102,6 +102,36 @@
           </div>
         </div>
       </div>
+      <div class="col-md-12 mt-2">
+        <div class="form-group">
+          <label class="font-weight-bold"> {{'ATTACHMENTS' | translate}} </label>
+          <div class="dropzone" appDragDrop (onFileDropped)="onFileDropped($event)">
+            <input type="file" #fileDropRef id="fileDropRef" multiple (change)="fileBrowseHandler($event.target.files)" />
+            <i class="text-danger fas fa-download fa-lg" aria-hidden="true"></i>
+            <h3>{{'DRAG_AND_DROP_FILE_HERE' | translate}}</h3>
+            <h3>{{'OR' | translate}}</h3>
+            <label for="fileDropRef">{{'BROWSE_FOR_FILE' | translate}}</label>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-12 mt-2">
+        <ul class="list-group">
+          <li class="list-group-item d-flex justify-content-between align-items-center"
+            *ngFor="let file of files; let i = index">
+            <h4 class="name">
+              {{ file?.name }} -- {{ formatBytes(file?.size) }}
+            </h4>
+            <span class="badge badge-pill">
+              <button class="btn btn-danger" (click)="onDeleteFile(i)">
+                <i class="text-light fas fa-trash"></i>
+              </button>
+            </span>
+            <div class="loading-shade" *ngIf="file?.progress">
+              <mat-spinner></mat-spinner>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
   </form>
 </mat-dialog-content>
@@ -113,7 +143,6 @@
     </button>
     <button type="button" class="btn btn-danger btn-md mx-2" (click)="dialogRef.close(false);"><i
         class="fas fa-times-circle"></i>
-      <!-- {{"CANCEL" | translate}} -->
       {{"Back" | translate}}
     </button>
   </div>
