--- a/src/app/inventory/send-email-dialog/send-email-dialog.component.html
+++ b/src/app/inventory/send-email-dialog/send-email-dialog.component.html
@@ -11,6 +11,7 @@
   <mat-spinner></mat-spinner>
 </div>
 <mat-dialog-content class="main">
+  <div class="scrollbar-example">
   <div class="col-md-12 col-sm-12">
     <div class="form-group">
       <mat-label [dir]="langDir">
@@ -134,6 +135,7 @@
       </div>
     </div>
   </form>
+</div>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <div class="col-md-12 mt-1" *hasClaim="'EMAIL_SEND_EMAIL'">
