--- a/src/app/interaction-reports/grp-tat-reports/grp-tat-reports.component.html
+++ b/src/app/interaction-reports/grp-tat-reports/grp-tat-reports.component.html
@@ -87,7 +87,7 @@
                 <td class="table-column-200" mat-cell *matCellDef="let row">{{row?.resolvedByTeam}} </td>
             </ng-container>
             <ng-container matColumnDef="timeTaken">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Time Taken(In Hours)</th>
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Time Taken(In Minutes)</th>
                 <td class="table-column-200" mat-cell *matCellDef="let row">{{row?.timeTaken || '--'}} </td>
             </ng-container>
             <ng-container matColumnDef="footer">
