--- a/src/app/inventory/send-email-dialog/send-email-dialog.component.scss
+++ b/src/app/inventory/send-email-dialog/send-email-dialog.component.scss
@@ -47,7 +47,7 @@ mat-form-field {
   background: #edb50ac2;
 }
 
-.scrollbar-example {
-  overflow-y: auto; /* Add vertical scrollbar */
-  max-height: 300px; /* Set the maximum height */
-}
+// .scrollbar-example {
+//   overflow-y: auto; /* Add vertical scrollbar */
+//   max-height: 700px; /* Set the maximum height */
+// }
