--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -94,6 +94,14 @@
             <p>Interaction Bulk Closer</p>
           </a>
         </li>
+        <li class="nav-item" *hasClaim="['INT_BULK_INTERACTION_CLOSER','INT_BULK_INTERACTION_CLOSER_HISTORY']">
+          <a [routerLink]="['/interaction/interaction-bulk-transfer']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+            class="nav-link">
+            <!-- <i class="far fa-list-alt nav-icon"></i> -->
+            <i class="fa fa-upload nav-icon"></i>
+            <p>Interaction Bulk Transfer</p>
+          </a>
+        </li>
         <!-- <li class="nav-item" *hasClaim="['INT_BULK_INTERACTION_CLOSER','INT_BULK_INTERACTION_CLOSER_HISTORY']">
           <a [routerLink]="['/interaction/internal-bulk-closer']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
             class="nav-link">
